--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="adaptive.css" />
     <script defer src="script.js"></script>
   </head>
 
@@ -55,6 +56,7 @@
         <div class="delete-stuff">
           <button class="btn delete" data-clear-complete-tasks-button>Очистить выполненное</button>
           <button class="btn delete" data-delete-list-button>Удалить лист</button>
+          <button class="btn delete" data-close-list-button>Закрыть лист</button>
         </div>
       </div>
     </div>
