language switcher fixes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
   <body>
     <div language-selector>
-      <p>Switch to English</h2>
+      <p>Switch to</h2>
+      <p>English</h2>
     </div>
 
     <div class="all-tasks">
